--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ REACT_APP_SEO_DESCRIPTION = "App Description"
 REACT_APP_SEO_KEYWORDS = "App Keywords"
 
 REACT_APP_LOCAL_STORAGE_KEY = "jobs"
+
+GENERATE_SOURCEMAP = false
